crates/daml-syntax/tests/compile_fail/coordinate_utf16_range_not_offset_pair.stderr
error[E0308]: mismatched types
 --> tests/compile_fail/coordinate_utf16_range_not_offset_pair.rs:6:41
  |
6 |     let _: (Utf16Offset, Utf16Offset) = range;
  |            --------------------------   ^^^^^ expected `(Utf16Offset, Utf16Offset)`, found `Utf16Range`
  |            |
  |            expected due to this
  |
  = note: expected tuple `(Utf16Offset, Utf16Offset)`
            found struct `Utf16Range`
